<resources>
    <string name="app_name">Cryptoo</string>
    <string name="hint_search">Search</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="add_button">Add</string>
    <string name="cancel">SKIP</string>
    <string name="my_currency">My Currency</string>
    <!-- Empty screen -->
    <string name="welcome">Welcome</string>
    <string name="empty_title">C\'mon do it..</string>
    <string name="empty_body">Push de + button below to add crypto to track</string>



    <string name="add_currency">Add Currency</string>
    <string name="add_coin_alert_first">How much did you buy it for?</string>
    <string name="alert_text_second">How many did you purchase?</string>
    <string name="total_amount">Total Amount</string>
    <string name="price">Price</string>
    <string name="index">Index</string>
    <string name="pieces">Pieces</string>
    <string name="initial_price">Initial Price</string>
    <string name="profit_loss">Profit / Loss</string>
    <string name="delete">Delete</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_default_currency">Default Currency</string>
    <string-array name="pref_default_currency_titles">
        <item>EUR - Euro</item>
        <item>USD - Dollar</item>
    </string-array>
    <string-array name="pref_default_currency_values">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string name="default_coin">EUR</string>

    <string name="pref_title_percentage">Percentage Change Period</string>
    <string-array name="pref_percentage_titles">
        <item>1h</item>
        <item>24h</item>
        <item>7d</item>
    </string-array>
    <string-array name="pref_percentage_values">
        <item>1</item>
        <item>24</item>
        <item>7</item>
    </string-array>

    <string name="pref_header_home_card">Home - Card Layout</string>

    <string name="pref_header_about">About Us</string>
    <string name="pref_rate">Rate Us</string>
    <string name="pref_privacy">Privacy &amp; Disclaimer</string>
    <string name="pref_invite">Invite Friends</string>
    <string name="pref_feedback">Send Feedback</string>

    <string name="initial_price_piece">Initial price (piece)</string>
    <string name="hint_number">Number</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="frequently_searched">Frequently searched</string>
    <string name="store">Download Cryptoo here : https://play.google.com/store/apps/details?id=</string>
    <string name="pref_title_settings">Settings</string>
    <string name="pref_title_privacy">Privacy  &amp; Disclaimer</string>
    <string name="pref_title_about">Cryptoo</string>
    <string name="privacy" formatted="true"><![CDATA[<center><h1> <font color="#202029">Privacy</font></h1></center>
    <p><font color="#202029">Cryptoo does NOT share any data that can be used to personally identify you. We do use and share non-personal data to improve our products and services; provide support; send notifications, offers, and promotions; and to make money from our free offerings using non-personal data.</font></p>
    <p><font color="#202029">Changes to this Privacy Statement The contents of this statement may be altered at any time, at our discretion. If you have any questions regarding our privacy policy then you may contact us.</font></p>
    <p><font color="#202029">Please note this app is subject to change or withdrawal in the future</font></p>
    <center><h1><font color="#202029">Disclaimer</font></h1></center><h3><font color="#202029">No Investment Advice</font></h3>
    <p><font color="#202029">The information provided on this app does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the apps content as such. Cryptoo does not recommend that any cryptocurrency should be bought, sold, or held by you. Do conduct your own due diligence and consult your financial advisor before making any investment decisions</font></p>
    <h3><font color="#202029">Accuracy of Information</font></h3>
    <p><font color="#202029">Cryptoo will strive to ensure accuracy of information listed on this app although it will not hold any responsibility for any missing or wrong information. Cryptoo provides all information as is. You understand that you are using any and all information available here at your own risk.</p></font>]]>
    </string>
    <string name="noInternet">No Internet Connection</string>
    <string name="noInternet_body">You need to have Mobile Data or wifi to access this. Press ok to Exit</string>
    <string name="last_update">Last updated\n </string>
    <string name="dialog_delete_body">Are you sure you want to delete %1$s from your portfolio?</string>
    <string name="dialog_delete_title">Delete coin</string>
    <string name="dialog_delete_confirm">YES</string>
    <string name="dialog_delete_skip">NO</string>
    <string name="dialog_remove_title">Bye, bye</string>
    <string name="dialog_remove_body">You successfully removed that coin from your list</string>
    <string name="settings_about">Cryptoo</string>
    <string name="settings_market_summary">Display market data including index and market price</string>
    <string name="settings_market_title">Market</string>
    <string name="settings_profit_title">profit</string>
    <string name="settings_profit_summary">Display your personal profit or loss both in percentage and amount</string>
    <string name="about_description">Cryptoo is a cooperative efford of cryptocurrency enthousiast and developer Ana Medeira and a designer Christian Gravemaker.</string>
    <string name="about_get_in_touch">Want to get in touch directly?</string>
    <string name="about_credits">Credits</string>
    <string name="about_ghipy_api">GHIPY API</string>
    <string name="about_giphy_link">https://developers.giphy.com/docs/</string>
    <string name="about_data_api">Cryptoo data api</string>
    <string name="about_data_api_link">https://www.cryptocompare.com/api/</string>
    <string name="personal_profit_amount_label">profit/loss</string>
    <string name="personal_profit_index_label">percentage</string>
    <string name="market_profit_amount_label">market price</string>
    <string name="market_profit_index_label">market index</string>
</resources>
