<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_storage_settings_general"
        android:title="@string/pref_header_general">
        <ListPreference
            android:defaultValue="@string/default_coin"
            android:entries="@array/pref_default_currency_titles"
            android:entryValues="@array/pref_default_currency_values"
            android:key="default_currency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_title_default_currency" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_storage_settings_home"
        android:title="@string/pref_header_home_card">
        <Preference
            android:layout="@layout/layout_settings_card"
            android:selectable="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/settings_profit_title"
            android:summary="@string/settings_profit_summary"
            android:title="Personal" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="market"
            android:summary="@string/settings_market_summary"
            android:title="@string/settings_market_title" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
    </PreferenceCategory>

    <PreferenceCategory
        android:enabled="true"
        android:key="pref_key_storage_settings_about"
        android:title="@string/pref_header_about">
        <Preference
            android:icon="@drawable/ic_lock_black_24dp"
            android:key="about"
            android:selectable="true"
            android:title="@string/settings_about" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
        <Preference
            android:icon="@drawable/ic_star_black_24dp"
            android:key="rate"
            android:selectable="true"
            android:title="@string/pref_rate" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
        <Preference
            android:icon="@drawable/ic_lock_black_24dp"
            android:key="privacy"
            android:selectable="true"
            android:title="@string/pref_privacy" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
        <Preference
            android:icon="@drawable/ic_share_black_24dp"
            android:key="share"
            android:selectable="true"
            android:title="@string/pref_invite" />
        <Preference
            android:layout="@layout/pref_line"
            android:selectable="false"
            android:title="divider" />
        <Preference
            android:icon="@drawable/ic_email_black_24dp"
            android:key="sendFeedback"
            android:selectable="true"
            android:title="@string/pref_feedback" />
    </PreferenceCategory>
    <Preference
        android:layout="@layout/layout_footer"
        android:selectable="false" />
</PreferenceScreen>