<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/home_horizontal_padding"
    android:paddingRight="@dimen/home_horizontal_padding"
    android:paddingLeft="@dimen/home_horizontal_padding">

    <TextView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/home_horizontal_padding"
        android:breakStrategy="balanced"
        android:fontFamily="@font/akkuratproregular"
        android:lines="4"
        android:gravity="center|left"
        android:lineSpacingMultiplier="1.2"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:text="@string/about_description"
        android:textColor="@color/title"
        android:textSize="@dimen/cards_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/cards_background"
        android:layout_marginBottom="@dimen/padding_s"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/title"
        android:fontFamily="@font/akkuratproregular"
        android:text="@string/about_get_in_touch"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:layout_marginBottom="@dimen/home_horizontal_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/about_round_top_corners"
        android:padding="@dimen/widget_card_padding"
        android:layout_marginBottom="@dimen/padding_xxs"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_marginRight="@dimen/widget_card_padding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blue"
            android:fontFamily="@font/akkuratproregular"
            android:text="Ana Medeira"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/widget_card_padding"
        android:layout_marginBottom="@dimen/home_horizontal_padding"
        android:background="@drawable/about_round_bottom_corners"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_black_24dp"
            android:layout_marginRight="@dimen/widget_card_padding"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blue"
            android:fontFamily="@font/akkuratproregular"
            android:text="Christian Gravemaker"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/cards_background"
        android:layout_marginBottom="@dimen/padding_s"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_credits"
        android:textColor="@color/title"
        android:fontFamily="@font/akkuratproregular"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:layout_marginBottom="@dimen/home_horizontal_padding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ghipy_api"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:textColor="@color/title"
        android:fontFamily="@font/akkuratprobold"
        android:layout_marginBottom="@dimen/padding_s"/>

    <TextView
        android:id="@+id/imagesApiLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:fontFamily="@font/akkuratproregular"
        android:textColorLink="@color/blue"
        android:text="@string/about_giphy_link"
        android:layout_marginBottom="@dimen/home_horizontal_padding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_data_api"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:textColor="@color/title"
        android:fontFamily="@font/akkuratprobold"
        android:layout_marginBottom="@dimen/padding_s"/>

    <TextView
        android:id="@+id/cryptoApiLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textColorLink="@color/blue"
        android:fontFamily="@font/akkuratproregular"
        android:paddingLeft="@dimen/padding_s"
        android:paddingRight="@dimen/padding_s"
        android:text="@string/about_data_api_link"/>

</LinearLayout>