<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asilvia.cryptoo.ui.start.StartActivity">

    <data>

        <variable
            name="empty"
            type="int" />
    </data>

    <RelativeLayout
        android:id="@+id/main_empty_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/home_horizontal_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/home_horizontal_padding"
            android:layout_marginLeft="@dimen/padding_s"
            android:fontFamily="@font/akkuratproregular"
            android:text="@string/welcome"
            android:textColor="@color/title"
            android:textSize="@dimen/title" />

        <RelativeLayout
            android:id="@+id/image_container"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/gif_image_vertical"
            android:background="@drawable/circle">

            <ImageView
                android:id="@+id/pushButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:padding="5dp"

                />
        </RelativeLayout>

        <TextView
            android:id="@+id/empty_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_xxl"
            android:fontFamily="@font/akkuratprobold"
            android:text="@string/empty_title"
            android:textColor="@color/blue"
            android:textSize="42sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/empty_title"
            android:layout_alignStart="@+id/empty_title"
            android:layout_below="@+id/empty_title"
            android:fontFamily="@font/akkuratprobold"
            android:text="@string/empty_body"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="21dp" />


    </RelativeLayout>
</layout>
