<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.asilvia.cryptoo.ui.information.InformationFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.asilvia.cryptoo.ui.add.AddCoinViewModel" />
    </data>


            <LinearLayout
                android:id="@+id/activity_coin_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:orientation="vertical"
                android:paddingLeft="@dimen/home_horizontal_padding"
                android:paddingRight="@dimen/home_horizontal_padding"

                >


                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="@dimen/details_image"
                    android:layout_height="@dimen/details_image"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/home_horizontal_padding"

                    android:descendantFocusability="beforeDescendants"
                    android:focusedByDefault="true"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    />



                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/padding_xxs"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="0dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/cards_background"
                        android:orientation="vertical"
                        android:padding="@dimen/details_card_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/akkuratproregular"
                            android:gravity="left"
                            android:text="@string/total_amount"
                            android:textColor="@color/details_cards_text"
                            android:textSize="@dimen/cards_text" />

                        <TextView
                            android:id="@+id/tvPriceNow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/akkuratprobold"
                            android:gravity="left"
                            android:text=""
                            android:textColor="@color/title"
                            android:textSize="@dimen/details_cards_value" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="4dp"
                    card_view:cardElevation="0dp"
                    card_view:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cards_background"
                        android:orientation="vertical"
                        android:padding="@dimen/details_card_padding">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/akkuratproregular"
                            android:gravity="left"
                            android:text="@string/index"
                            android:textColor="@color/details_cards_text"
                            android:textSize="@dimen/cards_text" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tvIndex"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/akkuratprobold"
                                android:gravity="left|center"
                                android:text=""
                                android:layout_marginRight="@dimen/padding_xs"
                                android:textColor="@color/title"
                                android:textSize="@dimen/details_cards_value" />

                            <ImageView
                                android:id="@+id/imIndexIndicator"
                                android:layout_width="21dp"
                                android:layout_height="21dp"
                                android:adjustViewBounds="true"
                                android:scaleType="fitXY"
                                 />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/padding_xxl"
                    android:layout_marginLeft="@dimen/padding_xxs"
                    android:layout_marginTop="@dimen/padding_xxl"
                    android:background="@drawable/add"
                    android:fontFamily="@font/akkuratprobold"
                    android:stateListAnimator="@null"
                    android:text="@string/add_button"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/action_button"
                    android:textAllCaps="false"/>

                <ImageView
                    android:layout_width="109dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/padding_xxl"
                    android:src="@drawable/ic_logo_cryptoo" />
            </LinearLayout>


</layout>